Materials with keyframes duplicated by 'make single user' are linked #69931

Closed
opened 2019-09-16 09:46:14 +02:00 by Marcin Twarowski · 5 comments

System Information
Operating system: Windows-10-10.0.16299 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86

Blender Version
Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-15 18:34, hash: b043bef000

Short description of error
When I make new material using either 'make single user' button or 'add new material' button in material properties tab, materials are still linked. So if you move, delete or add new keyframes to one material the same will apply to another. This happens only when duplicated material has some keyframes already.
I searched for similar bugs and found those two: #62393 #59062

Exact steps for others to reproduce the error
Here's a file with such linked materials: materials_keyframes_bug.blend

**System Information** Operating system: Windows-10-10.0.16299 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.86 **Blender Version** Broken: version: 2.81 (sub 11), branch: master, commit date: 2019-09-15 18:34, hash: `b043bef000` **Short description of error** When I make new material using either 'make single user' button or 'add new material' button in material properties tab, materials are still linked. So if you move, delete or add new keyframes to one material the same will apply to another. This happens only when duplicated material has some keyframes already. I searched for similar bugs and found those two: #62393 #59062 **Exact steps for others to reproduce the error** Here's a file with such linked materials: [materials_keyframes_bug.blend](https://archive.blender.org/developer/F7750404/materials_keyframes_bug.blend)

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Bastien Montagne was assigned by Philipp Oeser 2019-09-16 10:06:52 +02:00
Member

Can confirm, seems like (a variation of) #62393 (Materials made from 'Make Single User' have linked animation) has resurfaced...
@mont29: mind checking on this one?

Can confirm, seems like (a variation of) #62393 (Materials made from 'Make Single User' have linked animation) has resurfaced... @mont29: mind checking on this one?

This issue was referenced by 76650402f3

This issue was referenced by 76650402f3004cc833be4b6c55059dd1ddd5a3bf

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#69931
No description provided.